ajout de lombok partout où il était manquant